--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2022",
     "useDefineForClassFields": true,
@@ -7,9 +12,7 @@
     "module": "ESNext",
     "types": ["vite/client"],
     "skipLibCheck": true,
-    "paths": {
-      "@/*": ["./src/*"]
-    },
+
 
     /* Bundler mode */
     "moduleResolution": "bundler",
